samples/_failures_safe/1761629397_2ce6fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9782e6a.c: In function ‘main’:
./samples/SAFE/__tmp_d9782e6a.c:167:5: error: expected declaration or statement at end of input
  167 |     }
      |     ^
